# rotisserie

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pypi-release.yml  test-build.yml
src/rotisserie/: __init__.py  adapters.py  env.py  policies.py  pool.py  state.py  types.py  universal_auth.py
tests/: test_adapters_aiohttp.py  test_adapters_httpx.py  test_adapters_requests.py  test_aiohttp_enable_disable.py  test_basic.py  test_distribution.py  test_env.py  test_env_kwargs.py  test_policies.py  test_pool_edge_cases.py  test_retry_after.py  test_universal_auth.py  test_universal_auth_retries.py  test_universal_auth_trace_wrap.py  test_wrappers.py
