[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rotisserie"
version = "0.1.0"
description = "API key rotation + priority-aware scheduler layered on top of requests, httpx, and aiohttp."
readme = "README.md"
authors = [{name="Ryan Delano"}]
requires-python = ">=3.9"
keywords = ["rate limiting", "api", "throttling", "requests", "httpx", "aiohttp", "rotation", "scheduler"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
requests = ["requests>=2.28"]
httpx = ["httpx>=0.24"]
aiohttp = ["aiohttp>=3.9"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
      "aiohttp>=3.13.1",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "types-requests>=2.32.0",
    "mypy>=1.11.0",
    "ruff>=0.6.4",
    "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PL","Q"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["rotisserie"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
